--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "bin": {
     "ghcd": "./lib/index.js"
   },
+  "files": [
+    "lib",
+    "README.md",
+    "LICENSE.md"
+  ],
   "scripts": {
     "audit:npm-check-updates": "npx npm-check-updates --errorLevel 1",
     "build": "tsc -p .",
