--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "type": "git",
     "url": "git+https://github.com/djfarly/ghcd.git"
   },
-  "license": "MIT",
   "scripts": {
     "audit:npm-check-updates": "npx npm-check-updates --errorLevel 1",
     "build": "tsc -p .",
@@ -40,7 +39,8 @@
     "fs-extra": "^10.1.0",
     "got": "^12.5.0",
     "p-queue": "^7.3.0",
-    "p-retry": "^5.1.1"
+    "p-retry": "^5.1.1",
+    "pretty-bytes": "^6.0.0"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.0",
